--- a/task-launcher/src/styles/task.scss
+++ b/task-launcher/src/styles/task.scss
@@ -64,6 +64,9 @@ $border-color: #0f3cac;
   $button-width-primary: 60vh;
   $button-width-secondary: 40vh;
 
+  $button-number-side-length: 18vh; // from figma 192/1024
+  $button-number-font-size: 10vh; // from figma 104/1024
+
   //common color theme
   $grey-50: #C0C0C0;
   $grey-100: #979797;
@@ -106,7 +109,7 @@ $border-color: #0f3cac;
     @include cta-style($primary-200, $primary-100, $primary-200);
   }
   
-  .cta-style-hf {
+  .cta-style-hf { // for HaF, it's added via javascript
     @include cta-style($green-200, $green-100, $green-200);
   }
 
@@ -131,6 +134,12 @@ $border-color: #0f3cac;
     color: white;
     height: $button-height;
     width: $button-width-secondary;
+  }
+
+  .number-button {
+    @extend .cta-style-default;
+    width: $button-number-side-length;
+    height: $button-number-side-length;
   }
 
   // Instructions heights for a centered instructions screen with up to:
@@ -485,24 +494,14 @@ $border-color: #0f3cac;
       }
 
       .math-btn {
-        display: flex;
-        width: 12rem;
-        height: 12rem;
-        padding: 8px;
-        justify-content: center;
-        align-items: center;
-        gap: 8px;
-        border-radius: 32px;
-        border: 6px solid #0f3cac;
-        background: #275bdd;
-        // text
+        @extend .number-button;
+        // text //TODO: double check these font attributes against and incorporate to common color palette and font styles
         color: #fbfbfd;
         font-family: 'Noto Sans';
-        font-size: 10vh;
+        font-size: $button-number-font-size;
         font-style: normal;
         font-weight: 700;
         line-height: normal;
-        cursor: pointer;
       }
 
       .img-btn {
