--- a/task-launcher/src/styles/layout/_response-row.scss
+++ b/task-launcher/src/styles/layout/_response-row.scss
@@ -46,4 +46,17 @@
       }
     }
   }
+
+  &.multi-4 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+    @include respond-to('small') {
+      display: grid;
+      grid-template-columns: auto auto;
+      justify-content: center;
+      row-gap: 10px;
+    }
+  }
 }
