--- a/task-launcher/src/styles/layout/_containers.scss
+++ b/task-launcher/src/styles/layout/_containers.scss
@@ -8,6 +8,7 @@
   justify-content: center;
   text-align: center;
   color: $txt-primary;
+  margin: $lev-spacing-xxxs 0;
 
   &.header {
     p {
@@ -93,10 +94,18 @@
 }
 
 .lev-stimulus-container {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   max-width: 900px;
   justify-content: center;
   margin-top: 32px;
+  margin-bottom: 16px;
+  align-items: center;
+
+  img {
+    max-width: 100%;
+  }
 }
 
 .lev-stim-content {
@@ -156,4 +165,26 @@
     }
   }
 
+}
+
+.lev-instructions-container {
+  text-align: center;
+  font-size: 1.3rem;
+
+  .lev-title {
+    text-align: center;
+    margin-bottom: 3vh;
+    font-size: 2rem;
+  }
+
+  .lev-content {
+    text-align: left;
+    margin: 0 auto;
+    // max-width: 60vw;
+    line-height: 1.5;
+  }
+
+  .lev-footer {
+    margin-top: 1.5rem;
+  }
 }
