making image buttons bigger

--- a/task-launcher/src/styles/abstracts/_spacings.scss
+++ b/task-launcher/src/styles/abstracts/_spacings.scss
@@ -6,3 +6,5 @@ $lev-spacing-s: 24px;
 $lev-spacing-xs: 16px;
 $lev-spacing-xxs: 12px;
 $lev-spacing-xxxs: 8px;
+
+$lev-resized-buttons-2: calc(min(70vh, 90vw) / 2);
