--- a/task-launcher/src/styles/components/_buttons.scss
+++ b/task-launcher/src/styles/components/_buttons.scss
@@ -158,8 +158,8 @@ button {
 
     img {
       border: none;
-      width: clamp(120px, 12vw, 150px);
-      height: clamp(120px, 12vw, 150px);
+      width: clamp(120px, 18vw, 250px);
+      height: clamp(120px, 18vw, 250px);
       padding: 0;
       margin: 0;
       border-radius: $lev-spacing-s;
@@ -169,8 +169,8 @@ button {
     @include respond-to('small-medium') {
       border-radius: $lev-spacing-s;
       img {
-        width: clamp(100px, 20vw, 150px);
-        height: clamp(100px, 20vw, 150px);
+        width: clamp(100px, 20vw, 200px);
+        height: clamp(100px, 20vw, 200px);
         border-radius: $lev-spacing-xs;
       }
     }
@@ -186,14 +186,35 @@ button {
 
     &:hover {
       border-color: $bg-accent_secondary;
-      // box-shadow: $button-default-box-shadow rgba($bg-accent_secondary, 0.5) inset;
     }
 
     &:active {
       border-color: $border-button-primary-clicked;
-      // box-shadow: $button-secondary-box-shadow $border-button-primary-clicked inset,
-      //   $button-secondary-inner-shadow $bg-button-secondary inset;
     }
   }
 
+  &.image-large {
+    @extend .button-base;
+    padding: 0;
+    box-sizing: border-box;
+    border-color: $bg-button-primary;
+
+    img {
+      border: none;
+      width: $lev-resized-buttons-2;
+      height: $lev-resized-buttons-2;
+      padding: 0;
+      margin: 0;
+      border-radius: $lev-spacing-s;
+      float: left;
+    }
+
+    &:hover {
+      border-color: $bg-accent_secondary;
+    }
+
+    &:active {
+      border-color: $border-button-primary-clicked;
+    }
+  }
 }
