--- a/task-launcher/src/styles/components/_buttons.scss
+++ b/task-launcher/src/styles/components/_buttons.scss
@@ -158,8 +158,8 @@ button {
 
     img {
       border: none;
-      width: clamp(120px, 18vw, 250px);
-      height: clamp(120px, 18vw, 250px);
+      width: $image-button-dimension-large-screen;
+      height: $image-button-dimension-large-screen;
       padding: 0;
       margin: 0;
       border-radius: $lev-spacing-s;
@@ -169,8 +169,8 @@ button {
     @include respond-to('small-medium') {
       border-radius: $lev-spacing-s;
       img {
-        width: clamp(100px, 20vw, 200px);
-        height: clamp(100px, 20vw, 200px);
+        width: $image-button-dimension-small-medium-screen;
+        height: $image-button-dimension-small-medium-screen;
         border-radius: $lev-spacing-xs;
       }
     }
@@ -178,8 +178,8 @@ button {
     @include respond-to('small') {
       border-radius: $lev-spacing-s;
       img {
-        width: 25vw;
-        height: 25vw;
+        width: $image-button-dimension-small-screen;
+        height: $image-button-dimension-small-screen;
         border-radius: $lev-spacing-xs;
       }
     }
