--- a/task-launcher/src/styles/layout/_containers.scss
+++ b/task-launcher/src/styles/layout/_containers.scss
@@ -131,21 +131,21 @@
   @extend .lev-stim-content;
 
   img {
-    width: calc(3 * clamp(120px, 12vw, 150px));
-    height: calc(3 * clamp(120px, 12vw, 150px));
+    width: calc(3 * $image-button-dimension-large-screen);
+    height: calc(3 * $image-button-dimension-large-screen);
   }
 
   @include respond-to('small-medium') {
     img {
-      width: calc(3 * clamp(100px, 20vw, 150px));
-      height: calc(3 * clamp(100px, 20vw, 150px));
+      width: calc(3 * $image-button-dimension-small-medium-screen);
+      height: calc(3 * $image-button-dimension-small-medium-screen);
     }
   }
 
   @include respond-to('small') {
     img {
-      width: 3 * 25vw;
-      height: 3 * 25vw;
+      width: calc(3 * $image-button-dimension-small-screen);
+      height: calc(3 * $image-button-dimension-small-screen);
     }
   }
 
