fix replay button: adding a way to disable the replay button for the init stimulus time

--- a/task-launcher/src/styles/components/_buttons.scss
+++ b/task-launcher/src/styles/components/_buttons.scss
@@ -148,6 +148,17 @@ button {
       background-color: rgba($bg-button-primary-clicked, 0.6);
       border: 2px solid $border-button-primary-clicked;
     }
+
+    &:disabled {
+      background-color: rgba($bg-white-40, 0.6);
+      border: 2px solid $border-grey;
+      pointer-events: none;
+      svg {
+        path {
+          fill: $border-grey;
+        }
+      }
+    }
   }
 
   &.image {
