--- a/task-launcher/src/styles/abstracts/_variables.scss
+++ b/task-launcher/src/styles/abstracts/_variables.scss
@@ -10,3 +10,7 @@ $button-default-font-size: 3vw;
 $button-default-font-weight: 500;
 $button-secondary-box-shadow: -8px -10px 0px 0px;
 $button-secondary-inner-shadow: 0px 0px 12px 0px;
+
+$response-size-default: clamp(120px, 12vw, 150px);
+$response-size-sm: clamp(100px, 20vw, 150px);
+$response-size-s: 25vw;
