--- a/task-launcher/src/styles/components/_buttons.scss
+++ b/task-launcher/src/styles/components/_buttons.scss
@@ -237,8 +237,8 @@ button {
 
     img {
       border: none;
-      width: $response-size-large;
-      height: $response-size-large;
+      width: $response-size-m;
+      height: $response-size-m;
       padding: 0;
       margin: 0;
       border-radius: $lev-spacing-s;
