--- a/task-launcher/src/styles/abstracts/_variables.scss
+++ b/task-launcher/src/styles/abstracts/_variables.scss
@@ -14,4 +14,4 @@ $button-secondary-inner-shadow: 0px 0px 12px 0px;
 $response-size-default: clamp(120px, 12vw, 150px);
 $response-size-sm: clamp(100px, 20vw, 150px);
 $response-size-s: 25vw;
-$response-size-m: clamp(70px, 20vw, 250px)
+$response-size-m: calc(clamp(70px, 22vw, 250px) - 10px);
