mental rotation EOD WIP

--- a/task-launcher/src/styles/abstracts/_colors.scss
+++ b/task-launcher/src/styles/abstracts/_colors.scss
@@ -10,6 +10,8 @@ $bg-green-base-hover: #7AB800;
 $bg-green-base-clicked: #70A800;
 $bg-green-gradient: #CFEBB6;
 $bg-black_base: #010D18;
+$btn-disabled-bg: #C0C0C0;
+$btn-disabled-inset: #979797;
 $bg-grey-light: #EDEDED;
 $bg-bubble-base: #FFFFFF;
 $bg-white-30: #FFFFFF4d;
