fixing more afc stimulus classes and feedback classes

--- a/task-launcher/src/styles/components/_buttons.scss
+++ b/task-launcher/src/styles/components/_buttons.scss
@@ -269,6 +269,10 @@ button {
       border-color: $border-button-primary-clicked;
     }
 
+    &.selected {
+      border-color: $border-button-primary-clicked;
+    }
+
   }
   &.no-pointer-events {
     pointer-events: none;
