--- a/task-launcher/src/styles/layout/_response-row.scss
+++ b/task-launcher/src/styles/layout/_response-row.scss
@@ -68,4 +68,20 @@
     grid-template-rows: 1fr 1fr; /* two rows of equal height */
     gap: 1vw;
   }
+
+  &.grid-3x2 {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 50% 50%;
+    padding: 10px;
+    grid-gap: 4px;
+
+    & > * {
+      grid-column: span 2
+    }
+
+    & > *:nth-child(4) {
+      grid-column: 2 / span 2;
+    }
+  }
 }
