--- a/task-launcher/src/styles/abstracts/_fonts.scss
+++ b/task-launcher/src/styles/abstracts/_fonts.scss
@@ -4,6 +4,7 @@ $font-size-l: 64px;
 $font-size-m: 48px;
 $font-size-s: 40px;
 $font-size-xs: 32px;
+$font-size-xs-em: 1.5em; 
 $font-size-xxs: 24px;
 $font-size-xxxs: 16px;
 
