--- a/task-launcher/src/styles/layout/_containers.scss
+++ b/task-launcher/src/styles/layout/_containers.scss
@@ -91,6 +91,55 @@
       }
     }
   }
+
+  &.instruction-small {
+    display: flex;
+    padding: $lev-spacing-s;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border: 3px solid $bg-accent_secondary;
+    border-radius: 32px;
+    background-color: $bg-bubble-base;
+    max-width: 90vw;
+
+    p {
+      font-size: $font-size-xs-em;
+      font-weight: $font-weight-light;
+      line-height: 1.0;
+      margin: 0;
+    }
+    
+    @include respond-to('medium') {
+      display: flex;
+      padding: $lev-spacing-xs;
+      justify-content: center;
+      align-items: center;
+      border-radius: 24px;
+  
+      p {
+        font-size: $font-size-xxs;
+        font-weight: $font-weight-light;
+        line-height: 1.0;
+        margin: 0;
+      }
+    }
+  
+    @include respond-to('small') {
+      display: flex;
+      padding: $lev-spacing-xxs;
+      justify-content: center;
+      align-items: center;
+      border-radius: 16px;
+  
+      p {
+        font-size: $font-size-xxxs;
+        font-weight: $font-weight-light;
+        line-height: 1.0;
+        margin: 0;
+      }
+    }
+  }
 }
 
 .lev-stimulus-container {
