--- a/task-launcher/src/styles/layout/_response-row.scss
+++ b/task-launcher/src/styles/layout/_response-row.scss
@@ -85,3 +85,34 @@
     }
   }
 }
+
+.lev-response-row-diamond-layout {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* three columns of equal width */
+  grid-template-rows: auto auto; /* three rows, size according to content */
+  gap: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+
+  :nth-child(1) {
+    grid-column: 2; /* Centered in the middle column */
+    grid-row: 1;
+  }
+
+  :nth-child(2) {
+    grid-column: 1; /* First column */
+    grid-row: 1 / 3; /* Spanning from the first row to the third grid line */
+    align-self: center; /* Center this button vertically */
+  }
+
+  :nth-child(3) {
+    grid-column: 3; /* Third column */
+    grid-row: 1 / 3; /* Spanning from the first row to the third grid line */
+    align-self: center; /* Center this button vertically */
+  }
+
+  :nth-child(4) {
+    grid-column: 2; /* Centered in the middle column */
+    grid-row: 2;
+  }
+}
