--- a/task-launcher/src/styles/layout/_containers.scss
+++ b/task-launcher/src/styles/layout/_containers.scss
@@ -101,7 +101,8 @@
     border: 3px solid $bg-accent_secondary;
     border-radius: 32px;
     background-color: $bg-bubble-base;
-    max-width: 90vw;
+    width: 90vw;
+    max-width: max-content; 
 
     p {
       font-size: $font-size-xs-em;
@@ -118,7 +119,7 @@
       border-radius: 24px;
   
       p {
-        font-size: $font-size-xxs;
+        font-size: $font-size-xs-em;
         font-weight: $font-weight-light;
         line-height: 1.0;
         margin: 0;
@@ -133,7 +134,7 @@
       border-radius: 16px;
   
       p {
-        font-size: $font-size-xxxs;
+        font-size: $font-size-xs-em;
         font-weight: $font-weight-light;
         line-height: 1.0;
         margin: 0;
