--- a/task-launcher/src/styles/layout/_containers.scss
+++ b/task-launcher/src/styles/layout/_containers.scss
@@ -106,7 +106,7 @@
     }
   }
 
-  &.instruction-question{
+  &.roar-instruction-question{
     display: flex;
     border: none;
     border-radius: 0;
