--- a/task-launcher/src/styles/layout/_response-row.scss
+++ b/task-launcher/src/styles/layout/_response-row.scss
@@ -61,11 +61,11 @@
   }
 
   &.multi-3{
-      display: flex !important;
-      flex-direction: column !important;
-      justify-content: center !important;
-      align-items: center !important;
-      gap: 1rem !important;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 1rem;
   }
 
 }
