fixing a bunch of styling issues with egma math

--- a/task-launcher/src/styles/layout/_containers.scss
+++ b/task-launcher/src/styles/layout/_containers.scss
@@ -267,3 +267,11 @@
     opacity: 0.6;
   }
 }
+
+.lev-fixation-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  font-size: 4rem;
+}
