--- a/task-launcher/src/styles/layout/_video-containers.scss
+++ b/task-launcher/src/styles/layout/_video-containers.scss
@@ -6,6 +6,11 @@ $instruction_m_size: 50vw;
 $instruction_sm_size: 70vw;
 $instruction_s_size: 80vw;
 
+$instruction_sm_default_size: 35vw;
+$instruction_sm_m_size: 45vw;
+$instruction_sm_sm_size: 65vw;
+$instruction_sm_s_size: 75vw;
+
 video {
   &.instruction-video {
     width: $instruction_default_size;
@@ -24,6 +29,22 @@ video {
     @include respond-to('small') {
       width: $instruction_s_size;
       margin-top: calc($ratio_difference * $instruction_s_size);
+    }
+  }
+
+  &.instruction-video-small {
+    width: $instruction_sm_default_size;
+
+    @include respond-to('medium') {
+      width: $instruction_m_size;
+    }
+
+    @include respond-to('small-medium') {
+      width: $instruction_sm_size;
+    }
+
+    @include respond-to('small') {
+      width: $instruction_s_size;
     }
   }
 }
